# silicon_translater

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api_client/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/platform_windows/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/ui_bridge/: mod.rs
